[package]
name = "inin"
version = "0.1.1"
authors = ["Amir Hossein Abdolkhalegh (amirhosseinab) <amirhosseinab@outlook.com>"]
edition = "2018"
description = "It is a library written in Rust to parse and validate the Iranian national ID number"
license = "MIT"
readme = "README.md"
repository = "https://github.com/amirhosseinab/inin.git"
keywords = ["parser", "validator", "code-meli", "national-id"]
categories = ["algorithms", "parsing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
